fix: broken inputs layouts on contact pg & style: testing a darken background color

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,7 +15,7 @@
 
 body {
     display: flex;
-    background-color: #243242;
+    background-color: #0f161d;
 }
 header {
     display: flex;
@@ -314,6 +314,7 @@ main {
     display: flex;
     flex-direction: column;
     gap: 28px;
+    width: 80%;
     margin-bottom: 8vh;
 }
 .contact-email-form input {
@@ -322,24 +323,27 @@ main {
     border-radius: 18px;
 }
 #name-email {
-    width: 20rem;
+    width: 100%;
+}
+#phone-email {
+    width: 60%;
 }
 #type-service-email {
-    width: 20rem;
+    width: 100%;
     padding: 10px;
     border: none;
     border-radius: 18px;
 }
 #content-email {
-    width: 20rem;
+    width: 100%;
     height: 10rem;
-    padding: 12px;
+    padding: 10px;
     border: none;
     border-radius: 18px;
     resize: none;
 }
 .contact-email-form button {
-    width: 20rem;
+    width: 100%;
 }
 
 .form-backpanel {
